dpndnc's for prism and service add

--- a/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
+++ b/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
@@ -3,4 +3,26 @@
   <div class="d-flex justify-content-end mt-3">
     <a [routerLink]="['/admin/blogposts/add']" class="btn btn-primary">Add BlogPost</a>
   </div>
+
+  <ng-container *ngIf="blogPosts$ | async as blogposts">
+    <table class="table table-bordered mt-3">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Short Description</th>
+          <th>Author</th>
+          <th>Is Visible?</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let blogPost of blogposts">
+          <td>{{blogPost.title}}</td>
+          <td>{{blogPost.shortDescription}}</td>
+          <td>{{blogPost.author}}</td>
+          <td>{{blogPost.isVisible}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </ng-container>
+
 </div>
