--- a/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -32,7 +32,18 @@
 
         <div class="mt-3">
           <label for="content" class="form-label">Content</label>
-          <textarea id="content" name="content" class="form-control" [(ngModel)]="model.content"></textarea>
+          <div class="d-flex flex-row">
+            <div class="col-6 p-2">
+              <textarea
+                id="content"
+                name="content"
+                class="form-control"
+                [(ngModel)]="model.content"></textarea>
+            </div>
+            <div id="rightColContent" class="col-6 p-2">
+              <markdown [data]="model.content"></markdown>
+            </div>
+          </div>
         </div>
 
         <div class="mt-3">
