--- a/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -48,6 +48,13 @@
 
         <div class="mt-3">
           <label for="featuredImageUrl" class="form-label">Featured Image URL</label>
+
+          <ng-container id="imageContainer" *ngIf="model.featuredImageUrl != ''">
+            <div>
+              <img [src]="[model.featuredImageUrl]" alt="" height="100" class="my-2">
+            </div>
+          </ng-container>
+
           <input type="text"
           id="featuredImageUrl"
           name="featuredImageUrl"
