begin work on edit blogposts

--- a/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
+++ b/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
@@ -12,6 +12,8 @@
           <th>Short Description</th>
           <th>Author</th>
           <th>Is Visible?</th>
+          <th>Categories</th>
+          <th> </th>
         </tr>
       </thead>
       <tbody>
@@ -20,6 +22,14 @@
           <td>{{blogPost.shortDescription}}</td>
           <td>{{blogPost.author}}</td>
           <td>{{blogPost.isVisible}}</td>
+          <td>
+            <span *ngFor="let category of blogPost.categories">
+              <span class="badge bg-secondary me-2">{{category.name}}</span>
+            </span>
+          </td>
+          <td>
+            <a class="btn btn-light" [routerLink]="['/admin/blogposts', blogPost.id]">Edit</a>
+          </td>
         </tr>
       </tbody>
     </table>
