--- a/src/app/shared/components/image-selector/image-selector.component.html
+++ b/src/app/shared/components/image-selector/image-selector.component.html
@@ -7,9 +7,13 @@
       <div class="col-8 p-4"></div>
       <div class="col-4 p-4 bg-light">
         <h5>Upload Image</h5>
-        <form>
+        <form #form="ngForm" (ngSubmit)="uploadImage()">
           <div class="mt-3">
-            <input type="file" class="form-control" />
+            <input
+              type="file"
+              class="form-control"
+              (change)="onFileUploadChange($event)"
+            />
           </div>
           <div class="mt-3">
             <input
@@ -17,6 +21,7 @@
               class="form-control"
               placeholder="File Name"
               name="fileName"
+              [(ngModel)]="fileName"
             />
           </div>
           <div class="mt-3">
@@ -25,6 +30,7 @@
               class="form-control"
               placeholder="Title"
               name="title"
+              [(ngModel)]="title"
             />
           </div>
           <div class="mt-3">
