--- a/src/app/shared/components/image-selector/image-selector.component.html
+++ b/src/app/shared/components/image-selector/image-selector.component.html
@@ -4,7 +4,26 @@
   </div>
   <div class="card-body">
     <div class="d-flex flex-md-row flex-sm-col flex-wrap">
-      <div class="col-8 p-4"></div>
+      <div class="col-8 p-4" style="overflow-y: scroll">
+        <ng-container *ngIf="images$ | async as images">
+          <div class="d-flex flex-wrap">
+            <div
+              *ngFor="let image of images"
+              (click)="selectImage(image)"
+              style="min-width: 100px; justify-content: center; cursor: pointer"
+              class="me-1 bg-white d-flex align-items-center flex-column border p-3"
+            >
+              <img
+                [src]="image.url"
+                alt="some selected image"
+                [title]="image.title"
+                style="height: 100px"
+              />
+              <span class="mt-1">{{ image.title }}</span>
+            </div>
+          </div>
+        </ng-container>
+      </div>
       <div class="col-4 p-4 bg-light">
         <h5>Upload Image</h5>
         <form #form="ngForm" (ngSubmit)="uploadImage()">
