--- a/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -4,106 +4,160 @@
     <div class="mt-2 mb-5">
       <div class="mt-3">
         <label for="title" class="form-label">Title</label>
-        <input type="text"
-        id="title"
-        name="title"
-        class="form-control"
-        [(ngModel)]="model.title">
+        <input
+          type="text"
+          id="title"
+          name="title"
+          class="form-control"
+          [(ngModel)]="model.title"
+        />
       </div>
 
-        <div class="mt-3">
-          <label for="urlHandle" class="form-label">URL Handle</label>
-          <input type="text"
+      <div class="mt-3">
+        <label for="urlHandle" class="form-label">URL Handle</label>
+        <input
+          type="text"
           id="urlHandle"
           name="urlHandle"
           class="form-control"
-          [(ngModel)]="model.urlHandle">
-        </div>
+          [(ngModel)]="model.urlHandle"
+        />
+      </div>
 
-
-        <div class="mt-3">
-          <label for="shortDescription" class="form-label">Short Description</label>
-          <input type="text"
+      <div class="mt-3">
+        <label for="shortDescription" class="form-label"
+          >Short Description</label
+        >
+        <input
+          type="text"
           id="shortDescription"
           name="shortDescription"
           class="form-control"
-          [(ngModel)]="model.shortDescription">
-        </div>
+          [(ngModel)]="model.shortDescription"
+        />
+      </div>
 
-        <div class="mt-3">
-          <label for="content" class="form-label">Content</label>
-          <div class="d-flex flex-row">
-            <div class="col-6 p-2">
-              <textarea
-                id="content"
-                name="content"
-                class="form-control"
-                [(ngModel)]="model.content"></textarea>
-            </div>
-            <div id="rightColContent" class="col-6 p-2">
-              <markdown [data]="model.content"></markdown>
-            </div>
+      <div class="mt-3">
+        <label for="content" class="form-label">Content</label>
+        <div class="d-flex flex-row">
+          <div class="col-6 p-2">
+            <textarea
+              id="content"
+              name="content"
+              class="form-control"
+              [(ngModel)]="model.content"
+            ></textarea>
+          </div>
+          <div id="rightColContent" class="col-6 p-2">
+            <markdown [data]="model.content"></markdown>
           </div>
         </div>
+      </div>
 
-        <div class="mt-3">
-          <label for="featuredImageUrl" class="form-label">Featured Image URL</label>
+      <div class="mt-3">
+        <label for="featuredImageUrl" class="form-label"
+          >Featured Image URL
+          <button
+            type="button"
+            class="btn btn-light"
+            (click)="openImageSelector()"
+          >
+            Select Image
+          </button></label
+        >
 
-          <ng-container id="imageContainer" *ngIf="model.featuredImageUrl != ''">
-            <div>
-              <img [src]="[model.featuredImageUrl]" alt="" height="100" class="my-2">
-            </div>
-          </ng-container>
+        <ng-container id="imageContainer" *ngIf="model.featuredImageUrl != ''">
+          <div>
+            <img
+              [src]="[model.featuredImageUrl]"
+              alt=""
+              height="100"
+              class="my-2"
+            />
+          </div>
+        </ng-container>
 
-          <input type="text"
+        <input
+          type="text"
           id="featuredImageUrl"
           name="featuredImageUrl"
           class="form-control"
-          [(ngModel)]="model.featuredImageUrl">
-        </div>
+          [(ngModel)]="model.featuredImageUrl"
+        />
+      </div>
 
-        <div class="mt-3">
-          <label for="publishedDate" class="form-label">Published Date</label>
-          <input type="date"
+      <div class="mt-3">
+        <label for="publishedDate" class="form-label">Published Date</label>
+        <input
+          type="date"
           id="publishedDate"
           name="publishedDate"
           class="form-control"
-          value="{{model.publishedDate}}"
-          [ngModel]="model.publishedDate | date: 'yyyy-MM-dd'"
-          (ngModelChange)="model.publishedDate = $event">
-        </div>
+          value="{{ model.publishedDate }}"
+          [ngModel]="model.publishedDate | date : 'yyyy-MM-dd'"
+          (ngModelChange)="model.publishedDate = $event"
+        />
+      </div>
 
-        <div class="mt-3">
-          <label for="author" class="form-label">Author</label>
-          <input type="text"
+      <div class="mt-3">
+        <label for="author" class="form-label">Author</label>
+        <input
+          type="text"
           id="author"
           name="author"
           class="form-control"
-          [(ngModel)]="model.author">
-        </div>
+          [(ngModel)]="model.author"
+        />
+      </div>
 
-        <div class="form-check mt-3">
-          <input class="form-check-input" type="checkbox" id="isVisible"
+      <div class="form-check mt-3">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="isVisible"
           [(ngModel)]="model.isVisible"
-          name="isVisible">
-          <label class="form-check-label" for="isVisible">
-            Is Visible?
-          </label>
-        </div>
+          name="isVisible"
+        />
+        <label class="form-check-label" for="isVisible"> Is Visible? </label>
+      </div>
 
-        <div class="mt-3">
-          <label for="categories" class="form-label">Categories</label>
-          <ng-container *ngIf="categories$ | async as categories">
-            <select name="categories" class="form-control" id="categories" [(ngModel)]="model.categories" multiple>
-              <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
-            </select>
-          </ng-container>
+      <div class="mt-3">
+        <label for="categories" class="form-label">Categories</label>
+        <ng-container *ngIf="categories$ | async as categories">
+          <select
+            name="categories"
+            class="form-control"
+            id="categories"
+            [(ngModel)]="model.categories"
+            multiple
+          >
+            <option *ngFor="let category of categories" [value]="category.id">
+              {{ category.name }}
+            </option>
+          </select>
+        </ng-container>
+      </div>
 
-        </div>
-
-        <div class="mt-3">
-          <button type="submit" class="btn btn-primary">Save</button>
-        </div>
+      <div class="mt-3">
+        <button type="submit" class="btn btn-primary">Save</button>
+      </div>
     </div>
   </form>
+</div>
+
+<div
+  class="images-container-modal"
+  [ngClass]="{
+    'd-block': isImageSelectorVisible,
+    'd-none': !isImageSelectorVisible
+  }"
+>
+  <button
+    type="button"
+    class="closeImageSelector btn btn-light"
+    (click)="closeImageSelector()"
+  >
+    X
+  </button>
+  <app-image-selector></app-image-selector>
 </div>
