fix alternate text

--- a/src/app/features/public/home/home.component.html
+++ b/src/app/features/public/home/home.component.html
@@ -7,7 +7,7 @@
             <img
               [src]="blog.featuredImageUrl"
               class="card-img-top"
-              [alt]="blog.title"
+              alt="blog.title"
             />
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">{{ blog.title }}</h5>
